# skypier-vecDB

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: vector_operations.rs
crates/skypier-core/: Cargo.toml
crates/skypier-core/src/: database.rs  lib.rs  similarity.rs  vector.rs
crates/skypier-index/: Cargo.toml
crates/skypier-index/src/: flat.rs  hnsw.rs  lib.rs
crates/skypier-network/: Cargo.toml
crates/skypier-network/src/: consensus.rs  lib.rs  p2p_node.rs  replication.rs
crates/skypier-storage/: Cargo.toml
crates/skypier-storage/src/: lib.rs  redb_storage.rs
data/: vectors.redb
src/: api.rs  config.rs  main.rs
