[package]
name = "skypier-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
skypier-storage = { path = "../skypier-storage" }
skypier-index = { path = "../skypier-index" }

